# orbitdynamics

./: .gitignore  CMakeLists.txt  Constant.h  Doxyfile  OrbitDyn.bat  OrbitDyn_bin.bat  README.md  Satellite.h  list.lst  orbitdynamics.7z  orbitdynamics.props  readme.txt  test.7z
DE421/: DE421.sln  DE421.vcxproj  DE421.vcxproj.filters  append.c  convert.c  ephem_read.c  ephem_read.h  ephem_types.h  ephem_util.c  ephem_util.h  extract.c  gdcon.c  jdcon.c  md5sum.out  print_header.c  rdeph.c  read_record.c  scan_records.c  testpo.421
LowThrust/: AttDyn.cpp  AttDyn.h  CMakeLists.txt  Ctrla.cpp  Ctrli.cpp  Example2.cpp  GTO2GEO.cpp  LEO2GEO.cpp  LEOKeep.cpp  LTAttiCal.cpp  LTAttiControl.cpp  LTOrbitCal.cpp  LTOrbitControl.cpp  calllt.cpp  lt.cpp
attdyn/: attdyn.cpp
data/: GLGM2.grv  WGS84_EGM96.grv  plteph.405  tum2s.gfc
doc/: NRLMSISE-00-DOCUMENTATION.txt
doc/arma/: NOTICE.txt  README.txt  arma_docs.html
dyn/: BaseException.cpp  BaseException.h  CDateTime.cpp  CDateTime.h  CEngine.h  CMakeLists.txt  CentralBody.h  ColorNoise.h  Constant.h  Coordination.h  Delay.h  Euler.cpp  Euler.h  Facility.cpp  Facility.h  FileUtility.h  Kepler.cpp  Kepler.h  LibrationSat.h  Maneuver.h  Msise00.cpp  Msise00.h  OrbitDyn.h  PerfTimer.h  PlanetEphemeris.cpp  PosVel.h  Propagator.h  Quaternion.cpp  Quaternion.h  Satellite.cpp  Satellite.h  SimDataFile.h  StopCondition.cpp  StopCondition.h  StringUtility.h  Utility.cpp  Utility.h  nrlmsise-00.c  nrlmsise-00.h
dyn/armadillo_bits/: arma_ostream_meat.hpp  fn_spsolve.hpp
dyn/hdf5/: H5f90i_gen.h  H5pubconf.h  SZconfig.h
geometry/: Tri.c
include/: BaseException.h  CDatetime.h  CEngine.h  CentralBody.h  ColorNoise.h  Config.h  ConsoleUtility.h  Constant.h  Coordination.h  DE405.h  Delay.h  Euler.h  FileUtility.h  Kepler.h  Maneuver.h  MatlabEngine.h  OrbitDyn.h  PlanetEphemeris.h  Quaternion.h  Satellite.h  SimDataFile.h  StopCondition.h  StringUtility.h  Utility.h  armadillo_BLAS_LAPACK.h  armadillo_MKL.h  sofa.h
include/armadillo_bits/: config.hpp  def_hdf5.hpp
lib/: BLAS.lib  OrbitDyn.exp  OrbitDyn.lib  OrbitDynD.exp  OrbitDynD.lib  OrbitDynDD.exp  OrbitDynDD.lib  OrbitDynNF.exp  OrbitDynNF.lib  OrbitDynNFD.exp  OrbitDynNFD.lib  blas_win32.lib  blasd.lib  hdf5.lib  hdf5_D.lib  hdf5_cpp.lib  hdf5_cpp_D.lib  hdf5_hl.lib  hdf5_hl_D.lib  hdf5_hl_cpp.lib  hdf5_hl_cpp_D.lib  hdf5_test.lib  hdf5_test_D.lib  hdf5_tools.lib  hdf5_tools_D.lib  lapack_win32.lib  libOrbitDyn.dylib  libboost_timer-vc141-mt-gd-x32-1_66.lib  libboost_timer-vc141-mt-gd-x64-1_66.lib  libboost_timer-vc141-mt-x32-1_66.lib  libboost_timer-vc141-mt-x64-1_66.lib  libf2c.lib  libf2cd.lib  libhdf5.settings  libhdf5_cpp.lib  libhdf5_hl.lib  libhdf5_hl_D.lib  libhdf5_hl_cpp.lib  libhdf5_hl_cpp_D.lib  libhdf5_test.lib  (+11 more)
lib/Debug/: libOrbitDyn.dylib
maneuver/: Addjtm.cpp  AdjustTime.cpp  CMakeLists.txt  EWcosk.txt  EWcosktraj.txt  EWectrl.txt  EWsk.txt  EWsktraj.txt  NScosk.txt  NSictrl.txt  NSsk.txt  NSsktraj.txt  adj.txt  attctrl.cpp  attdet.cpp  conform.txt  consformation.cpp  cskeep.cpp  csorbit.txt  csout.txt  deorbit.txt  fac.txt  geoEWsk.cpp  geoNSsk.cpp  geocolocationE.cpp  geocolocationI.cpp  geocosk.txt  geodeorbit.cpp  geodeout.txt  geoorbit.txt  geosk.txt  geotrans.cpp  geotranscfg.txt  geotransout.txt  groundtraj.cpp  groundtraj.txt  gto.txt  gtout.txt  gtrc.txt  incl.cpp  (+21 more)
matlab/: AMDbangbang.m  AU.m  Avv.m  Ayrp.m  Constant.m  Contents.m  Earth.m  GEarth.m  GMoon.m  GSun.m  J2.m  J3.m  J4.m  Kepler2Gee.m  LunarSatOrbitDyn.m  LunarSatOrbitDyn.mexw32  MexOrbitDyn.m  NES.m  Re.m  Rm.m  SunSyncRepeating.m  TH2p.m  THstm.m  THtraj.m  UD.m  VelPeAp.m  We.m  YRPa.m  a2t.m  access.m  airdragtorque.m  attsphere.m  bdt2date.m  boxpatch.m  c2q.m  cart2kepler.m  cla2eqt.m  claJ2ktod.m  clatod2j2k.m  coe2goe.m  (+168 more)
matlab/mexbuild/: OrbitDyn.lib  libOrbitDyn.dylib  make.m  mexDE405.mexmaci64  mexDE421.mexmaci64  mexOrbitDyn.cpp  mexOrbitDyn.m  mexOrbitDyn.mexmaci64  mexOrbitDyn.mexw64  mexde405.cpp  mexde405.mexw64  mexde421.cpp  mexde421.mexw64  sofa.cpp  test init.txt  test.m
node/: app.js  deorbit.txt  fac.txt  index.html  leocap.bat  leocap.txt  leodeorbit.bat  leotrans.bat  leotrans.txt  orbit.txt  sap.txt  sap1.bat  sap1out.txt  sap2.bat  sap2out.txt  test.html  说明.txt
orbitdyn/: BaseException.cpp  BaseException.h  CDateTime.cpp  CDatetime.h  CEngine.cpp  CEngine.h  CMakeLists.txt  CentralBody.cpp  CentralBody.h  ColorNoise.h  Config.h  ConsoleUtility.h  Constant.h  Coordination.h  DE405.h  Delay.h  Euler.cpp  Euler.h  Facility.cpp  Facility.h  FileUtility.h  Kepler.cpp  Kepler.h  LibrationSat.cpp  LibrationSat.h  Maneuver.h  MatlabEngine.h  Msise00.cpp  Msise00.h  OrbitDyn.h  PerfTimer.h  PlanetEphemeris.cpp  PlanetEphemeris.h  PosVel.h  Propagator.cpp  Propagator.h  Quaternion.cpp  Quaternion.h  Satellite.cpp  Satellite.h  (+12 more)
orbitdyn/armadillo_bits/: arma_rng.hpp  config.hpp
orbitdyn/hdf5/: H5f90i_gen.h  H5fortran_types.F90  H5pubconf.h
proj/: OrbitDyn.sln  VC80StaticLib.vcproj  VC80StaticLib.vcxproj  VC80StaticLib.vcxproj.filters
proj/OrbitDyn/: OrbitDyn.vcxproj  ReadMe.txt  (+1 more)
sofa/: CMakeLists.txt  a2af.c  a2tf.c  ab.c  af2a.c  anp.c  anpm.c  apcg.c  apcg13.c  apci.c  apci13.c  apco.c  apco13.c  apcs.c  apcs13.c  aper.c  aper13.c  apio.c  apio13.c  atci13.c  atciq.c  atciqn.c  atciqz.c  atco13.c  atic13.c  aticq.c  aticqn.c  atio13.c  atioq.c  atoc13.c  atoi13.c  atoiq.c  bi00.c  bp00.c  bp06.c  bpn2xy.c  c2i00a.c  c2i00b.c  c2i06a.c  c2ibpn.c  (+183 more)
src/: BaseException.cpp  CDateTime.cpp  CEngine.cpp  CMakeLists.txt  CentralBody.cpp  DE405.cpp  Facility.cpp  Kepler.cpp  PlanetEphemeris.cpp  Satellite.cpp  StringUtility.cpp  Utility.cpp  nrlmsise-00.c  ublas.cpp
test/: CMakeLists.txt  EarthFull.cpp  ReadMe.txt  checkmemoryleak.cpp  test.vcproj  test.vcxproj  test.vcxproj.filters  testBackward.cpp  test_DE405_DE421.cpp  test_RIC.cpp  test_access.cpp  test_circle_moon.cpp  test_earth_lunar_transfer.cpp  test_facility.cpp  test_mean_inst.cpp  test_orbit_maneuver.cpp  test_orbit_propagator.cpp  test_rapidsattlite.cpp  test_sg.cpp  test_sofa_Gst.cpp  testjson.cpp
(+11 files in other folders)
